# rusttimeanddatedotcomparser

./: .gitignore  .project  Cargo.toml  README.md  urls.txt
src/: animation.rs  cache.rs  clock_widget.rs  druid_app.rs  druid_clock_app.rs  druid_ui.rs  lib.rs  main.rs  mongo_api.rs  multiwin.rs  parse_timeanddate_dot_com.rs  time_and_date_data.rs  web_page_reader.rs
src/tests/: cache_test.rs  mod.rs  parse_timeanddate_dot_com_tests.rs  test-urls-some-commented-out.txt  test-urls.txt
tests/: e2e_tests.rs  mod.rs
