[package]
name = "rusttimeanddatedotcomparser"
version = "0.1.0"
authors = ["Edwin Grosmann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
surf = "1.0.3"
html5ever = "0.25.1"
url = "2.1.1"
curl = "0.4.25"
hyper = "0.13.1"
markup5ever_rcdom = "0.1.0"
tokio = { version = "0.2.9", features = ["sync"] }
markup5ever = "0.10.0"
http = "0.2.0"
http-body = "0.3.1"
chrono = "0.4.10"
druid = "0.4.0"
log = "0.4.8"
simple_logger = "1.4.0"
mongodb = { version = "1.0.0", default-features = false, features = ["async-std-runtime"] }
bson = "1.0.0"
serde_json = "1.0.57"
serde = "1.0"
time = "0.2.16"

[dev-dependencies]
tokio = { version = "0.2.9", features = ["fs", "macros", "io-std", "rt-util", "sync", "time", "test-util"] }
